# iterable_sections

./: CMakeLists.txt  README.md  extensions.cmake  rom_sections.ld  rom_sections.ld.in
src/: main.c  register_service.h  service_1.c
